--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ header {
 }
 .search .search-item input {
     outline: none;
+    margin-bottom: 4px;
     border: none;
     width: 200%;
     padding-left: 10px;
@@ -126,7 +127,6 @@ header {
     background-color: white;
     width: 100%;
     height: 25%;
-    z-index: 2;
 }
 .section-1 .section-1-item .items-details p {
     text-align: center;
@@ -388,10 +388,6 @@ footer {
   .close {
     cursor: pointer;
   }
-  form {
-    border: 3px solid #f1f1f1;
-  }
-  
   input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -457,8 +453,8 @@ footer {
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
@@ -503,3 +499,110 @@ footer {
     from {transform: scale(0)}
     to {transform: scale(1)}
   }
+/* hello */
+  input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* Add a background color when the inputs get focus */
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: -7px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity:1;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtns {
+  padding: 14px 20px;
+  background-color: #f44336;
+  margin-bottom: 20px;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtns, .signupbtns {
+  float: left;
+  width: 50%;
+}
+
+/* Add padding to container elements */
+.containers {
+  padding: 16px;
+}
+
+/* The Modal (background) */
+.modals {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
+/* Modal Content/Box */
+.modal-contents {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+/* Style the horizontal ruler */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* The Close Button (x) */
+.closes {
+  position: absolute;
+  right: 35px;
+  top: 15px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #f1f1f1;
+}
+
+.closes:hover,
+.closes:focus {
+  color: #f44336;
+  cursor: pointer;
+}
+
+/* Clear floats */
+.clearfixs::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+    width: 100%;
+  }
+}
